2007-10-25  uberdork

	patch by: lazy.et  <lazyet users sourceforge net>

	* ed2k_hash/cl_ui.c (ui_setoptions):
	* ed2k_hash/options.c (options_print_help_screen_and_exit):
	  Add -- command line option to separate option arguments from
	  filenames, so that it's possible to hash files that start with a
	  hyphen (without using an absolute path or ./-foo). Closes: #1462750

2007-10-25  uberdork

	* AUTHORS:
	  Convert to UTF-8.

	* configure.ac:
	  Bump version to 0.5.0.

2007-10-25  uberdork

	Patch by: Dominik Mierzejewski <dominik greysector net> and Adam Dunn

	* ed2k_hash/md4.c (MD4Init):
	* ed2k_hash/md4.h (PROTOTYPES, POINTER, UINT2, UINT4, UINT4):
	  Fix bug in MD4 calculation on platforms where sizeof(long) != 4,
	  ie. x86-64 and most other 64-bit platforms (fixes #1491834).

	* ed2k_hash/cl_ui.c:
	* ed2k_hash/options.c:
	  Include <string.h> to avoid compiler warnings.

2004-11-07  uberdork
	* ed2k_hash/processfile.c: Use _SC_PAGESIZE if defined, insted
	  _SC_PAGE_SIZE, and user getpagesize() as fallback on BSD.
	  Patch by Yar Tikhiy (#1061892).

2004-08-30  fraca7  <fraca7@free.fr>

	* ed2k_hash/main.c (is_directory): Particularly ugly hack to
	recognize 'C:\' and stuff as a directory...

	* ed2k_hash/GUI/MainWindow.cpp (add_dir_cb): Hack to work around
	drives and directories mix

	* ed2k_hash/processfile.c: Windows-friendly version of
	get_file_size (under Windows, it seems that ftell returns a signed
	integer, so is limited to 2Gb files).

2003-06-28 08:30  fraca7

	* ed2k_hash/GUI/: About.cpp, configure.in: updated version number

2003-06-24 23:51  uberdork

	* ed2k_hash/processfile.c: reverted wrong 'fix'

2003-06-24 00:14  uberdork

	* ed2k_hash/processfile.c: fix for files exactly 9278000 bytes
	  large

2003-06-15 15:54  fraca7

	* ed2k_hash/GUI/: About.h, Configuration.cpp, Configuration.h,
	  MainWindow.cpp, MainWindow.h, gui.cpp, ui.cpp: changed .h to .H
	  for FLTK includes

2003-06-12 20:28  uberdork
